# 20020-map

./: .eslintrc.js  .gitignore  Cargo.toml  KU.kml  PUR.kml  README.md  WASH.kml  build.js  index.html  main.js  netlify.toml  notes.md  package-lock.json  package.json  parse.py  style.css
data/: boundary.csv  boundary.kml  teams.csv
site/: index.html  main.js  style.css
src/: boundary.rs  geo.rs  geometry.rs  image.rs  label.rs  main.rs  ord.rs  output.rs  survey.rs  template.rs
survey/: Air Force.kml  Akron.kml  Alabama A&M.kml  Alabama State.kml  Appalachian State.kml  Arizona State.kml  Arizona.kml  Arkansas State.kml  Arkansas-Pine Bluff.kml  Arkansas.kml  BYU.kml  Ball State.kml  Baylor.kml  Boise State.kml  Bowling Green.kml  Buffalo.kml  Central Michigan.kml  Charlotte.kml  Cincinnati.kml  Clemson.kml  Colorado State.kml  Colorado.kml  Duke.kml  Eastern Michigan.kml  Fresno State.kml  GAST.kml  GT.kml  Georgia Southern.kml  Georgia State.kml  Georgia Tech.kml  Georgia.kml  Grambling State.kml  Howard.kml  Illinois.kml  Indiana.kml  Iowa State.kml  Iowa.kml  Kansas State.kml  Kansas.kml  Kent State.kml  (+75 more)
templates/: 20020.kml
