[package]
name = "navarro"
version = "0.1.0"
authors = ["iliana etaoin <iliana@buttslol.net>"]
repository = "https://github.com/iliana/20020-map"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = { version = "0.10", default-features = false }
contrast = "0.1"
derive_more = "0.99"
geo = "0.16"
hex = "0.4"
itertools = "0.10"
lazy_static = "1"
oxipng = { version = "4", default-features = false, features = ["parallel"] }
regex = "1"
resvg = "0.13"
tiny-skia = "0.3"
uom = "0.31"
usvg = "0.13"
zip = "0.5"
