[package]
name = "navarro"
version = "0.1.0"
authors = ["iliana etaoin <iliana@buttslol.net>"]
repository = "https://github.com/iliana/20020-map"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
contrast = "0.1"
derive_more = "0.99"
hex = "0.4"
itertools = "0.10"
lazy_static = "1"
paste = "1"
regex = "1"
tiny-skia = "0.3"

[dependencies.askama]
version = "0.10"
default-features = false

[dependencies.oxipng]
version = "4"
default-features = false
features = ["parallel"]

[dependencies.resvg]
version = "0.13"
default-features = false

[dependencies.uom]
version = "0.31"
default-features = false
features = ["f64", "si", "std"]

[dependencies.usvg]
version = "0.13"
default-features = false
features = ["text"]

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate", "time"]
